fix result buttons spacing

--- a/www/css/app.css
+++ b/www/css/app.css
@@ -134,7 +134,7 @@
 .button-results {
   width: 220px;
   height: 60px;
-  margin: 16px auto;
+  margin: 3% auto;
   border-radius: 4px;
 }
 .button-play-again {
